# chronos

./: .gitignore  README.md  pyproject.toml  python.sh
.github/workflows/: ci.yaml  publish.yaml
examples/: parallel_graceful.py  parallel_returns.py
src/chronos/: __init__.py  demo_progress_fix.py  logger.py  parallel.py
tests/: test_comprehensive.py  test_logger.py
