[project]
authors = [{name = "cminalo", email = "cminalopez@outlook.com"}]
dependencies = [
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "psutil>=7.2.0",
    "rich>=14.3.0",
]
name = "chronos-logger"
requires-python = ">= 3.11"
version = "0.7.4"

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/chronos"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
chronos-logger = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
nodejs = ">=25.6.1,<25.7"
lazygit = ">=0.59.0,<0.60"
